fix(launcher): Seki.json 恢复官方参数格式，PCL 需重启以重新加载实例定义