@@ -16,9 +16,9 @@
   vanilla 1.21.1 的 client 下载、资源索引、日志配置、参数与全部库合并进同一
   文件，不再 `inheritsFrom` 1.21.1。因此把仓库克隆到 `versions/Seki` 后，
   启动器无需预先安装 1.21.1 前置版本即可识别并补齐运行文件。
-  JVM 参数中的 `--add-modules` / `--add-opens` / `--add-exports` 必须写成
-  `--add-opens=值` 这样的单 token 形式；PCL 会把分离的“旗标 + 后续值”合并成
-  非法命令行，导致 Java 报主类找不到。
+  JVM 参数沿用 NeoForge 官方“旗标 + 值”逐对写法。PCL 会缓存已解析的实例
+  定义：修改 `Seki.json` 后必须完全重启 PCL（或刷新版本列表），否则旧参数
+  仍会被复用并导致启动失败。
 - `modrinth.index.json` 固定远程下载清单：187 个文件（模组与默认光影），每个条目
   都带有 SHA-1、SHA-512 和多个下载源，安装器校验哈希后下载。
 - `config/`、`kubejs/`、`defaultconfigs/` 以及少量内嵌二进制作为 overrides
